--- a/ShoppingListApp/ShoppingListApp.csproj
+++ b/ShoppingListApp/ShoppingListApp.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <PackageReference Include="Konscious.Security.Cryptography.Argon2" Version="1.3.0" />
+    <PackageReference Include="Microsoft.Web.WebView2" Version="1.0.1587.40" />
   </ItemGroup>
 
   <ItemGroup>
