--- a/ShoppingListApp/ShoppingListApp.csproj
+++ b/ShoppingListApp/ShoppingListApp.csproj
@@ -16,6 +16,7 @@
 
   <ItemGroup>
     <PackageReference Include="Konscious.Security.Cryptography.Argon2" Version="1.3.0" />
+    <PackageReference Include="Microsoft.AspNet.WebApi.Client" Version="5.2.9" />
     <PackageReference Include="Microsoft.Web.WebView2" Version="1.0.1587.40" />
     <PackageReference Include="System.Net.Http" Version="4.3.4" />
   </ItemGroup>
