polished banning system

--- a/ShoppingListApp/App.config
+++ b/ShoppingListApp/App.config
@@ -10,6 +10,9 @@
             <setting name="LastUsername" serializeAs="String">
                 <value />
             </setting>
+            <setting name="BanTime" serializeAs="String">
+                <value>0</value>
+            </setting>
         </ShoppingListApp.Properties.Settings>
     </userSettings>
 </configuration>
