--- a/ShoppingListApp/Properties/Settings.settings
+++ b/ShoppingListApp/Properties/Settings.settings
@@ -5,5 +5,8 @@
     <Setting Name="LastUsername" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="BanTime" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">0</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
